--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,20 @@ label {
   border-radius: 5px;
 }
 
+#instructions {
+  margin-top: 30px;
+  padding: 10px 20px;
+  border: 2px solid #333;
+  border-radius: 5px;
+  background-color: #f0f0f0;
+  text-align: left;
+  width: 300px;
+}
+
+#instructions p {
+  margin: 8px 0;
+}
+
 .shake {
   animation: shake-animation 1s ease-in-out;
 }
